[metadata]
name = eh
version = 1.2.2
author = Justin L. Hammond
author-email = runningempty@gmail.com
summary = A command line program that will output helpful reminders based on parameters
description-file = eh/contrib/subjects/eh.md
description-content-type = text/markdown
license = Apache-2
home-page = http://github.com/roaet/eh
classifier =
    Development Status :: 5 - Production/Stable
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[entry_points]
console_scripts =
    eh = eh.cli:main
    eh_autocomplete = eh.autocomplete:main

eh.subject_extensions =
    built_in_subjects = eh.built_in_subject
